--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 749098546145394823
 textchannel = 749098546145394822
 ladderchannel = 
 jungsanchannel = 
