--- a/boss.ini
+++ b/boss.ini
@@ -1,24 +1,24 @@
 ----- 일반보스 -----
-bossname = 기감
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 거드
-gentime = 03:00
+bossname = 12시밀리아
+gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 이프
-gentime = 02:00
+bossname = 6시밀리아
+gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 마요
-gentime = 03:00
+bossname = 5시이블린
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 6시이블린
+gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
