--- a/boss.ini
+++ b/boss.ini
@@ -1,25 +1,55 @@
 ----- 일반보스 -----
-bossname = 12시밀리아
-gentime = 04:00
+bossname = 1칼리바
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
 
-bossname = 6시밀리아
-gentime = 04:00
+bossname = 2칼리바
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
 
-bossname = 5시이블린
-gentime = 04:00
+bossname = 3칼리바
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
 
-bossname = 6시이블린
-gentime = 04:00
+bossname = 1린드르
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 2린드르
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 3린드르
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 1라우디
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 2라우디
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 3라우디
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
 
