--- a/boss.ini
+++ b/boss.ini
@@ -53,3 +53,63 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 빤니빤니와 도안놓쳐요
 
+bossname = 라움상
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 라움하
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 헬라스상
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 헬라스하
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 드노아상
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 드노아하
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 벨레드상
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 벨레드하
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 모락스상
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
+bossname = 모락스하
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+
