--- a/boss.ini
+++ b/boss.ini
@@ -1,115 +1,72 @@
 ----- 일반보스 -----
-bossname = 1칼리바
-gentime = 12:00
+bossname = 1도그록
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 2칼리바
-gentime = 12:00
+bossname = 1라카탄
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 3칼리바
-gentime = 12:00
+bossname = 1셰르마
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 1린드르
-gentime = 12:00
+bossname = 1페리라
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 2린드르
-gentime = 12:00
+bossname = 4도그록
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 3린드르
-gentime = 12:00
+bossname = 4라카탄
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 1라우디
-gentime = 12:00
+bossname = 4셰르마
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 2라우디
-gentime = 12:00
+bossname = 4페리라
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 3라우디
-gentime = 12:00
+bossname = 5도그록
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 라움상
-gentime = 12:00
+bossname = 5라카탄
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 라움하
-gentime = 12:00
+bossname = 5셰르마
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
+alert_ment = 입니다.
 
-bossname = 헬라스상
-gentime = 12:00
+bossname = 5페리라
+gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
-
-bossname = 헬라스하
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
-
-bossname = 드노아상
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
-
-bossname = 드노아하
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
-
-bossname = 벨레드상
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
-
-bossname = 벨레드하
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
-
-bossname = 모락스상
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
-
-bossname = 모락스하
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 빤니빤니와 도안놓쳐요
-
+alert_ment = 입니다.
