--- a/boss.ini
+++ b/boss.ini
@@ -23,6 +23,12 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
+bossname = 1마프르만
+gentime = 16:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
 bossname = 4도그록
 gentime = 16:00
 nogencheck = 1
@@ -42,6 +48,12 @@ before_alert_ment = 입니다
 alert_ment = 입니다.
 
 bossname = 4페리라
+gentime = 16:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 4마프르만
 gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -70,3 +82,10 @@ gentime = 16:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
+
+bossname = 5마프르만
+gentime = 16:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
