--- a/boss.ini
+++ b/boss.ini
@@ -1,91 +1,176 @@
 ----- 일반보스 -----
-bossname = 1도그록
-gentime = 16:00
+bossname = 팬서
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 1라카탄
-gentime = 16:00
+
+bossname = 기셀라
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 1셰르마
-gentime = 16:00
+
+bossname = 오르카
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 1페리라
-gentime = 16:00
+
+bossname = 볼피
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 1마프르만
-gentime = 16:00
+bossname = 4팬서
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 4도그록
-gentime = 16:00
+
+bossname = 4기셀라
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 4라카탄
-gentime = 16:00
+
+bossname = 4오르카
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 4셰르마
-gentime = 16:00
+
+bossname = 4볼피
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 4페리라
-gentime = 16:00
+bossname = 5팬서
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 4마프르만
-gentime = 16:00
+
+bossname = 5기셀라
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 5도그록
-gentime = 16:00
+
+bossname = 5오르카
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 5라카탄
-gentime = 16:00
+
+bossname = 5볼피
+gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 5셰르마
-gentime = 16:00
+bossname = 두크라스
+gentime = 21:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 5페리라
-gentime = 16:00
+bossname = 지프나크
+gentime = 21:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 5마프르만
-gentime = 16:00
+bossname = 카타스랄
+gentime = 21:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
+bossname = 테라핌
+gentime = 22:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 키리코
+gentime = 22:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 셀피나
+gentime = 22:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 스노트라
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 탄파나
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 이둔
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 갈루몬드
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 에다
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 케바린
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 코드
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 키르니르
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 티알피
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
