--- a/boss.ini
+++ b/boss.ini
@@ -174,3 +174,169 @@ gentime = 48:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
+
+bossname = 1델락
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1파스빌
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1세티벨
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1바눌린
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 2델락
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2파스빌
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2세티벨
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2바눌린
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 1프래머
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1다지안
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1파라크
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1보르트
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2프래머
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2다지안
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2파라크
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2보르트
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1게르모
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 1데바릭
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 1보나딘
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 1루트미온
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 1바니아스
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1게르모
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 2데바릭
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 2보나딘
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 2루트미온
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+
+bossname = 2바니아스
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
