--- a/boss.ini
+++ b/boss.ini
@@ -1,81 +1,301 @@
 ----- 일반보스 -----
-bossname = 팬서
-gentime = 23:00
+bossname = 1라우디
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2라우디
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 3라우디
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1칼리바
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2칼리바
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 3칼리바
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1린드르
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2린드르
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 3린드르
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
 
-bossname = 기셀라
-gentime = 23:00
+bossname = 라움상
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 오르카
-gentime = 23:00
+bossname = 라움하
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 볼피
-gentime = 23:00
+bossname = 드노아상
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 4팬서
-gentime = 23:00
+bossname = 드노아하
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 4기셀라
-gentime = 23:00
+bossname = 헬라스상
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 4오르카
-gentime = 23:00
+bossname = 헬라스하
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 4볼피
-gentime = 23:00
+bossname = 벨레드상
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 5팬서
-gentime = 23:00
+bossname = 벨레드하
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 5기셀라
-gentime = 23:00
+bossname = 모락스상
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 5오르카
-gentime = 23:00
+bossname = 모락스하
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
+bossname = 1마라키
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
 
-bossname = 5볼피
-gentime = 23:00
+bossname = 2마라키
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1오바드
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2오바드
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1로쿠스
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2로쿠스
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1헬비오
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2헬비오
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1노빌
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2노빌
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 도그록
+gentime = 16:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 라카탄
+gentime = 16:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 셰르마
+gentime = 16:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 마프르만
+gentime = 16:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 페리라
+gentime = 16:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1바눌린
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1파스빌
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1세티벨
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1델락
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2바눌린
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2파스빌
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2세티벨
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2델락
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1프래머
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1다지안
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1보르트
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 1파라크
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2프래머
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2다지안
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2보르트
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2파라크
+gentime = 20:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
@@ -98,7 +318,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 테라핌
+bossname = 셀피나
 gentime = 22:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -116,7 +336,79 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 스노트라
+bossname = 팬서
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 기셀라
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 오르카
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 볼피
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 4팬서
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 4기셀라
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 4오르카
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 4볼피
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 5팬서
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 5기셀라
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 5오르카
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 5볼피
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 이둔
 gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -128,147 +420,26 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 이둔
+bossname = 스노트라
 gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-bossname = 갈루몬드
-gentime = 48:00
+bossname = 1보나딘
+gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 에다
-gentime = 48:00
+bossname = 1루트미온
+gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 케바린
-gentime = 48:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-bossname = 코드
-gentime = 48:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-bossname = 키르니르
-gentime = 48:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-bossname = 티알피
-gentime = 48:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 1델락
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 1파스빌
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 1세티벨
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 1바눌린
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-bossname = 2델락
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 2파스빌
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 2세티벨
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 2바눌린
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-bossname = 1프래머
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 1다지안
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 1파라크
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 1보르트
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 2프래머
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 2다지안
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 2파라크
-gentime = 20:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 2보르트
-gentime = 20:00
+bossname = 1데바릭
+gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
@@ -279,29 +450,25 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 1데바릭
-gentime = 24:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-bossname = 1보나딘
-gentime = 24:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-bossname = 1루트미온
-gentime = 24:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
 bossname = 1바니아스
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2보나딘
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2루트미온
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 2데바릭
 gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -313,30 +480,44 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
 
-
-bossname = 2데바릭
-gentime = 24:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-bossname = 2보나딘
-gentime = 24:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-bossname = 2루트미온
-gentime = 24:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
 bossname = 2바니아스
 gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 티알피
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 에다
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 키르니르
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 케바린
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 갈루몬드
+gentime = 48:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다.
+
+bossname = 코드
+gentime = 48:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다.
